--- a/jsonInFirebase/index.html
+++ b/jsonInFirebase/index.html
@@ -97,6 +97,6 @@
     </section>
 
     <!-- DMR: js donde está la funcionalidad ADD, REMOVE, UPDATE-->
-    <script src="./functions.js"></script>
+    <script src="./js/functions.js"></script>
   </body>
 </html>
