--- a/jsonInFirebase/dashboard.html
+++ b/jsonInFirebase/dashboard.html
@@ -26,39 +26,45 @@
 
     <title>Proyecto bases de datos</title>
 
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <!-- MPC: colocar estos js para poder utilizar las librerias de firebase-->
-        <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-database.js"></script> 
-        <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script>
-
-        <!-- MPC: conexión a la BD de firebase, se obtiene de la cuenta firesbase-->
-        <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-        apiKey: "AIzaSyC0XqH0p0bPE29I1LRdV2HZ59bllUiEqgI",
-        authDomain: "tec2021-1795b.firebaseapp.com",
-        databaseURL: "https://tec2021-1795b-default-rtdb.firebaseio.com",
-        projectId: "tec2021-1795b",
-        storageBucket: "tec2021-1795b.appspot.com",
-        messagingSenderId: "86528278955",
-        appId: "1:86528278955:web:f046bc8ac9c05a499652ee",
-        measurementId: "G-FEQR97R2EC"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-        </script>
-
     <!-- bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="css/style.css" ></script>
 
 </head>
 <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-7">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">
+                Cumplimiento de Ventas
+              </h3>
+              <div class="row text-center">
+                <div class="col">Ventas</div><div class="col">Ventas</div><div class="col">Ventas</div>
+              </div>
+            </div><!-- /.card-header -->
+            <div class="card-body">
+              <div class="tab-content p-0">
+                <!-- Morris chart - Sales -->
+                <div class="chart tab-pane active" id="revenue-chart"
+                     style="position: relative; height: 300px;">
+                     <canvas id="myChart" width="400" height="400"></canvas>
+                    </div>
+                <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">
+                  <canvas id="sales-chart-canvas" height="300" style="height: 300px;"></canvas>
+                </div>
+              </div>
+            </div><!-- /.card-body -->
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>    
 
-    <script src="./functions.js"></script>
+  
+    
+    <script src="./js/dash.js"></script>
   </body>
 </html>
