--- a/jsonInFirebase/dashboard.html
+++ b/jsonInFirebase/dashboard.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -28,37 +29,126 @@
 
     <!-- bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="css/style.css" ></script>
 
 </head>
 <body>
   <section class="content">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-7">
+      <div class="row ">
+        <div class="col-lg-6">
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">
                 Cumplimiento de Ventas
               </h3>
-              <div class="row text-center">
-                <div class="col">Ventas</div><div class="col">Ventas</div><div class="col">Ventas</div>
+            </div><!-- /.card-header -->
+            <div class="card-body">
+              <div class="row text-center" id="val_Cumpl">
               </div>
+              <div class="tab-content p-0">
+                <!-- Morris chart - Sales -->
+                <div class="chart tab-pane active" id="revenue-chart"
+                     style="position: relative; height: 300px;">
+                     <canvas id="myChart" ></canvas>
+                    </div>
+              </div>
+            </div><!-- /.card-body -->
+            </div>
+        </div>
+        <div class="col-lg-3 align-items-stretch">
+          <div class="row justify-content-center" >
+          <div class="card" id="dough_1">
+            <div class="card-header">
+              <h3 class="card-title">
+                Cumplimiento
+              </h3>
             </div><!-- /.card-header -->
             <div class="card-body">
               <div class="tab-content p-0">
                 <!-- Morris chart - Sales -->
                 <div class="chart tab-pane active" id="revenue-chart"
-                     style="position: relative; height: 300px;">
-                     <canvas id="myChart" width="400" height="400"></canvas>
+                     style="position: relative; height: 200px;">
+                     <canvas id="Doughnut_1" ></canvas>
                     </div>
-                <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;">
-                  <canvas id="sales-chart-canvas" height="300" style="height: 300px;"></canvas>
-                </div>
               </div>
             </div><!-- /.card-body -->
+          </div></div>
+          <div class="row justify-content-center" >
+            <div class="card" id="dough_1-2">
+              <div class="card-header">
+                <h3 class="card-title">
+                  Pedidos Abiertos
+                </h3>
+              </div><!-- /.card-header -->
+              <div class="card-body">
+                <div class="text-center" id="val_Cumpl1">
+                </div>
+              </div>
+            </div></div>
+        </div>    
+        <div class="col-lg-3 align-items-stretch">
+          <div class="row justify-content-center">
+          <div class="card" id="dough_2" >
+            <div class="card-header">
+              <h3 class="card-title">
+                Proyectado
+              </h3>
+            </div><!-- /.card-header -->
+            <div class="card-body">
+              <div class="tab-content p-0">
+                <!-- Morris chart - Sales -->
+                <div class="chart tab-pane active" id="revenue-chart"
+                     style="position: relative; height: 200px;">
+                     <canvas id="Doughnut_2" ></canvas>
+                    </div>
+              </div>
+            </div><!-- /.card-body -->
+          </div></div>
+          <div class="row justify-content-center" >
+            <div class="card" id="dough_2-2" >
+              <div class="card-header">
+                <h3 class="card-title">
+                  Cotizaciones Abiertas
+                </h3>
+              </div><!-- /.card-header -->
+              <div class="card-body">
+                <div class="text-center" id="val_Cumpl2">
+
+                </div>
+              </div>
+            </div></div>
+        </div>         
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">
+                Acumulado Anual
+              </h3>
+            </div><!-- /.card-header -->
+            <div class="card-body">
+              <div class="row text-center" >
+                <div class="col-lg-6" id="row_"></div>
+                <div class="col-lg-6" id="cump_"></div>
+              </div>
             </div>
-        </div>
+          </div>
+        </div> <div class="col-lg-6">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">
+                Ventas VS Devoluciones
+              </h3>
+            </div><!-- /.card-header -->
+            <div class="card-body">
+              <div class="row text-center" >
+                <div class="col-lg-6"  id="fact_"></div>
+                <div class="col-lg-6"  id="dev_"></div>
+              </div>
+            </div>
+          </div>
+        </div>   
       </div>
     </div>
   </section>    
